--- a/templates/views-add.html
+++ b/templates/views-add.html
@@ -41,6 +41,13 @@
       </div>
 
       <div class="form-item">
+        <label class="form-label">标题</label>
+        <div class="input-block">
+          <input type="text" class="view_title" name="view_title" v-model="view_title">
+        </div>
+      </div>
+
+      <div class="form-item">
         <label class="form-label">描述</label>
         <div class="input-block">
            <textarea name="view_description" class="description-textarea" v-model="view_description"></textarea>
